--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -122,6 +122,8 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\midi\connector_callback.cpp" />
     <ClCompile Include="src\midi\connector.cpp" />
+    <ClCompile Include="src\midi\connector_callback_debug.cpp" />
+    <ClCompile Include="src\midi\connector_common.cpp" />
     <ClCompile Include="src\midi\connector_debug.cpp" />
     <ClCompile Include="src\midi\message_handler.cpp" />
     <ClCompile Include="src\midi\message_task.cpp" />
@@ -144,6 +146,10 @@
     <ClInclude Include="src\main.hpp" />
     <ClInclude Include="src\common.hpp" />
     <ClInclude Include="src\midi\connector.hpp" />
+    <ClInclude Include="src\midi\connector_callback.hpp" />
+    <ClInclude Include="src\midi\connector_callback_debug.hpp" />
+    <ClInclude Include="src\midi\connector_common.hpp" />
+    <ClInclude Include="src\midi\connector_debug.hpp" />
     <ClInclude Include="src\midi\message_handler.hpp" />
     <ClInclude Include="src\midi\message_task.hpp" />
     <ClInclude Include="src\model\ev.hpp" />
