--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -81,7 +81,7 @@
     <ClCompile Include="src\midi\callback_debug.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\midi\connector_common.cpp">
+    <ClCompile Include="src\midi\midi_common.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -176,7 +176,7 @@
     <ClInclude Include="src\midi\callback_debug.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\connector_common.hpp">
+    <ClInclude Include="src\midi\midi_common.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
