impl the functionality

--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="src\logger.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\midi\callback.cpp" />
+    <ClCompile Include="src\midi\connection.cpp" />
     <ClCompile Include="src\midi\connector.cpp" />
     <ClCompile Include="src\midi\callback_debug.cpp" />
     <ClCompile Include="src\midi\midi_common.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="src\logger.hpp" />
     <ClInclude Include="src\main.hpp" />
     <ClInclude Include="src\common.hpp" />
+    <ClInclude Include="src\midi\connection.hpp" />
     <ClInclude Include="src\midi\connector.hpp" />
     <ClInclude Include="src\midi\callback.hpp" />
     <ClInclude Include="src\midi\callback_debug.hpp" />
