--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="src\gui\gui.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\gui\gui_util.cpp">
+    <ClCompile Include="src\util\gui_util.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\gui\gui_debug.cpp">
@@ -110,7 +110,7 @@
     <ClInclude Include="src\gui\gui.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\gui\gui_util.hpp">
+    <ClInclude Include="src\util\gui_util.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\logger.hpp">
