--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="src\midi\erstwhile_message_handler.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\midi\message_task.cpp">
+    <ClCompile Include="src\midi\task_list.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\annotation.cpp">
@@ -143,7 +143,7 @@
     <ClInclude Include="src\midi\erstwhile_message_handler.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\message_task.hpp">
+    <ClInclude Include="src\midi\task_list.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\model\ev.hpp">
