message_handler is now a virtual class that holds byte vector and can be used to assign roles to each inheritor

--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="src\gui\gui_debug.cpp" />
     <ClCompile Include="src\gui\gui_edit.cpp" />
     <ClCompile Include="src\gui\gui_option.cpp" />
+    <ClCompile Include="src\midi\message_handler.cpp" />
     <ClCompile Include="src\util\gui_util.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\logger.cpp" />
@@ -131,7 +132,6 @@
     <ClCompile Include="src\midi\callback_debug.cpp" />
     <ClCompile Include="src\midi\midi_common.cpp" />
     <ClCompile Include="src\midi\connector_debug.cpp" />
-    <ClCompile Include="src\midi\message_handler.cpp" />
     <ClCompile Include="src\midi\erstwhile_message_handler.cpp" />
     <ClCompile Include="src\midi\task_list.cpp" />
     <ClCompile Include="src\operation.cpp" />
@@ -153,6 +153,7 @@
     <ClInclude Include="src\gui\gui_font.hpp" />
     <ClInclude Include="src\gui\gui.hpp" />
     <ClInclude Include="src\gui\gui_color.hpp" />
+    <ClInclude Include="src\midi\message_handler.h" />
     <ClInclude Include="src\util\gui_util.hpp" />
     <ClInclude Include="src\image.hpp" />
     <ClInclude Include="src\logger.hpp" />
@@ -163,7 +164,6 @@
     <ClInclude Include="src\midi\callback_debug.hpp" />
     <ClInclude Include="src\midi\midi_common.hpp" />
     <ClInclude Include="src\midi\connector_debug.hpp" />
-    <ClInclude Include="src\midi\message_handler.hpp" />
     <ClInclude Include="src\midi\erstwhile_message_handler.hpp" />
     <ClInclude Include="src\midi\task_list.hpp" />
     <ClInclude Include="src\model\ev.hpp" />
