--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -102,7 +102,7 @@
     <ClCompile Include="src\midi\connection.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\midi\message_handler.cpp">
+    <ClCompile Include="src\midi\msg\message_handler.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\midi\msg\channel_message_creator.cpp">
@@ -224,7 +224,7 @@
     <ClInclude Include="src\midi\connection.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\message_handler.h">
+    <ClInclude Include="src\midi\msg\message_handler.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\midi\msg\message_creator.h">
