--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -121,9 +121,9 @@
     <ClCompile Include="src\gui\gui_debug.cpp" />
     <ClCompile Include="src\gui\gui_edit.cpp" />
     <ClCompile Include="src\gui\gui_option.cpp" />
-    <ClCompile Include="src\midi\msg\channel_message_creator.cpp" />
+    <ClCompile Include="src\midi\message_creator\channel_message_creator.cpp" />
     <ClCompile Include="src\midi\msg\message_handler.cpp" />
-    <ClCompile Include="src\midi\msg\sysex_message_creator.cpp" />
+    <ClCompile Include="src\midi\message_creator\sysex_message_creator.cpp" />
     <ClCompile Include="src\util\gui_util.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\logger.cpp" />
@@ -155,10 +155,10 @@
     <ClInclude Include="src\gui\gui_font.hpp" />
     <ClInclude Include="src\gui\gui.hpp" />
     <ClInclude Include="src\gui\gui_color.hpp" />
-    <ClInclude Include="src\midi\msg\channel_message_creator.h" />
-    <ClInclude Include="src\midi\msg\message_creator.h" />
+    <ClInclude Include="src\midi\message_creator\channel_message_creator.h" />
+    <ClInclude Include="src\midi\message_creator\message_creator.h" />
     <ClInclude Include="src\midi\msg\message_handler.h" />
-    <ClInclude Include="src\midi\msg\sysex_message_creator.h" />
+    <ClInclude Include="src\midi\message_creator\sysex_message_creator.h" />
     <ClInclude Include="src\util\gui_util.hpp" />
     <ClInclude Include="src\image.hpp" />
     <ClInclude Include="src\logger.hpp" />
