--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -105,10 +105,10 @@
     <ClCompile Include="src\midi\msg\message_handler.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\midi\msg\channel_message_creator.cpp">
+    <ClCompile Include="src\midi\message_creator\channel_message_creator.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="src\midi\msg\sysex_message_creator.cpp">
+    <ClCompile Include="src\midi\message_creator\sysex_message_creator.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -227,13 +227,13 @@
     <ClInclude Include="src\midi\msg\message_handler.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\msg\message_creator.h">
+    <ClInclude Include="src\midi\message_creator\message_creator.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\msg\sysex_message_creator.h">
+    <ClInclude Include="src\midi\message_creator\sysex_message_creator.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\midi\msg\channel_message_creator.h">
+    <ClInclude Include="src\midi\message_creator\channel_message_creator.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
