--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="src\gui\gui_edit.cpp" />
     <ClCompile Include="src\gui\gui_option.cpp" />
     <ClCompile Include="src\midi\message_creator\channel_message_creator.cpp" />
+    <ClCompile Include="src\midi\msg\dump_message.cpp" />
     <ClCompile Include="src\midi\msg\message_handler.cpp" />
     <ClCompile Include="src\midi\message_creator\sysex_message_creator.cpp" />
     <ClCompile Include="src\util\gui_util.cpp" />
@@ -157,6 +158,7 @@
     <ClInclude Include="src\gui\gui_color.hpp" />
     <ClInclude Include="src\midi\message_creator\channel_message_creator.h" />
     <ClInclude Include="src\midi\message_creator\message_creator.h" />
+    <ClInclude Include="src\midi\msg\dump_message.h" />
     <ClInclude Include="src\midi\msg\message_handler.h" />
     <ClInclude Include="src\midi\message_creator\sysex_message_creator.h" />
     <ClInclude Include="src\util\gui_util.hpp" />
