--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="src\midi\msg\dump_message.cpp" />
     <ClCompile Include="src\midi\msg\message_handler.cpp" />
     <ClCompile Include="src\midi\message_creator\sysex_message_creator.cpp" />
+    <ClCompile Include="src\midi\msg\message_stringizer.cpp" />
     <ClCompile Include="src\util\gui_util.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\logger.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="src\midi\msg\dump_message.h" />
     <ClInclude Include="src\midi\msg\message_handler.h" />
     <ClInclude Include="src\midi\message_creator\sysex_message_creator.h" />
+    <ClInclude Include="src\midi\msg\message_stringizer.h" />
     <ClInclude Include="src\util\gui_util.hpp" />
     <ClInclude Include="src\image.hpp" />
     <ClInclude Include="src\logger.hpp" />
