--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -113,8 +113,8 @@
     <ClCompile Include="src\config\reader.cpp" />
     <ClCompile Include="src\config\section.cpp" />
     <ClCompile Include="src\config\writer.cpp" />
-    <ClCompile Include="src\data\internal_patch.cpp" />
-    <ClCompile Include="src\data\internal_setting.cpp" />
+    <ClCompile Include="src\data\local_patch.cpp" />
+    <ClCompile Include="src\data\local_setting.cpp" />
     <ClCompile Include="src\error.cpp" />
     <ClCompile Include="src\gui\gui_font.cpp" />
     <ClCompile Include="src\gui\gui.cpp" />
@@ -151,8 +151,8 @@
     <ClInclude Include="src\config\reader.hpp" />
     <ClInclude Include="src\config\section.hpp" />
     <ClInclude Include="src\config\writer.hpp" />
-    <ClInclude Include="src\data\internal_patch.hpp" />
-    <ClInclude Include="src\data\internal_setting.hpp" />
+    <ClInclude Include="src\data\local_patch.hpp" />
+    <ClInclude Include="src\data\local_setting.hpp" />
     <ClInclude Include="src\error.hpp" />
     <ClInclude Include="src\gui\gui_font.hpp" />
     <ClInclude Include="src\gui\gui.hpp" />
