--- a/app/App.vcxproj.filters
+++ b/app/App.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\midi\message_entity\message_stringizer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\midi\device_inquiry_info.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
     <ClCompile Include="src\midi\message_entity\data_dump_picker.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -243,6 +246,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\midi\message_entity\message_stringizer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\midi\device_inquiry_info.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\midi\message_entity\data_dump_picker.h">
