--- a/app/App.vcxproj
+++ b/app/App.vcxproj
@@ -124,7 +124,7 @@
     <ClCompile Include="src\midi\device_inquiry_info.cpp" />
     <ClCompile Include="src\midi\message_creator\channel_message_creator.cpp" />
     <ClCompile Include="src\midi\message_entity\data_dump_picker.cpp" />
-    <ClCompile Include="src\midi\message_entity\dump_message.cpp" />
+    <ClCompile Include="src\midi\message_entity\dump_validator.cpp" />
     <ClCompile Include="src\midi\message_entity\message_entity.cpp" />
     <ClCompile Include="src\midi\message_creator\sysex_message_creator.cpp" />
     <ClCompile Include="src\midi\message_entity\message_stringizer.cpp" />
@@ -162,7 +162,7 @@
     <ClInclude Include="src\midi\message_creator\channel_message_creator.h" />
     <ClInclude Include="src\midi\message_creator\message_creator.h" />
     <ClInclude Include="src\midi\message_entity\data_dump_picker.h" />
-    <ClInclude Include="src\midi\message_entity\dump_message.h" />
+    <ClInclude Include="src\midi\message_entity\dump_validator.h" />
     <ClInclude Include="src\midi\message_entity\message_entity.h" />
     <ClInclude Include="src\midi\message_creator\sysex_message_creator.h" />
     <ClInclude Include="src\midi\message_entity\message_stringizer.h" />
